[package]
name = "v-proxy"
version = "0.2.0"
authors = ["https://github.com/vproxy666"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.5.0"
log = "0.4.8"
env_logger = "0.7.1"
clap = "2.33.0"
chrono = "0.4.11"
http = "0.2.1"
futures = "0.3.4"
futures-timer = "3.0.2"
futures-util = "0.3.4"
tokio = { version = "0.2.20", features = ["full"] }
hyper = "0.13.5"
lazy_static = "1.4.0"
regex = "1.3.7"
base64 = "0.12.0"
tokio-rustls = "0.13.0"
rustls = { version = "0.17.0", features = ["dangerous_configuration"] }
webpki = "0.21.2"
hyper-rustls = "0.20.0"
hyper-staticfile = "0.5.2"
rusqlite = { version = "0.23.1", features = ["bundled"] }
uuid = { version = "0.8.1", features = ["v4"] }
serde_json = "1.0.52"
bytes = "0.5.4"
multipart = "0.16.1"
x509-parser = "0.7.0"
url = "2.1.1"
