[package]
name = "v-proxy"
version = "0.2.7"
authors = ["https://github.com/vproxy666"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.6.2"
log = "0.4.8"
env_logger = "0.7.1"
clap = "2.33.1"
chrono = "0.4.11"
http = "0.2.1"
futures = "0.3.5"
futures-timer = "3.0.2"
futures-util = "0.3.5"
tokio = { version = "0.2.21", features = ["full"] }
hyper = "0.13.6"
lazy_static = "1.4.0"
regex = "1.3.9"
base64 = "0.12.2"
tokio-rustls = "0.13.1"
rustls = { version = "0.17.0", features = ["dangerous_configuration"] }
webpki = "0.21.3"
hyper-rustls = "0.20.0"
hyper-staticfile = "0.5.3"
rusqlite = { version = "0.23.1", features = ["bundled"] }
uuid = { version = "0.8.1", features = ["v4"] }
serde_json = "1.0.55"
bytes = "0.5.5"
multipart = "0.17.0"
x509-parser = "0.7.0"
url = "2.1.1"
