[package]
name = "v-proxy"
version = "0.2.9"
authors = ["https://github.com/vproxy666"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.7"
log = "0.4"
env_logger = "0.8"
clap = "2.33"
chrono = "0.4"
http = "0.2"
futures = "0.3"
futures-timer = "3.0"
futures-util = "0.3"
tokio = { version = "0.2", features = ["full"] }
hyper = "0.13"
lazy_static = "1.4"
regex = "1.4"
base64 = "0.13"
tokio-rustls = "0.13"
rustls = { version = "0.17", features = ["dangerous_configuration"] }
webpki = "0.21"
hyper-rustls = "0.20"
hyper-staticfile = "0.5"
rusqlite = { version = "0.24", features = ["bundled"] }
uuid = { version = "0.8", features = ["v4"] }
serde_json = "1.0"
bytes = "0.5"
multipart = "0.17"
x509-parser = "0.8"
url = "2.2"
